Fixed the alignment of the icons and the text

--- a/styles.css
+++ b/styles.css
@@ -93,10 +93,12 @@ picture {
 
 .cost {
     display: flex;
+    align-items: center;
 }
 
 .time-left {
     display: flex;
+    align-items: center;
     margin-right: 1em;
 }
 
